# SCAP-Seminar-MPI

./: .gitignore  README.md  todo.txt
GameOfLife/: CMakeLists.txt  GoL-scorep.filt  image_creation.c  image_creation.h  load_and_compile.sh  main.c  run.sh  run_image_compiling.sh  statistics.md
GameOfLife/src/: arg_parser.c  arg_parser.h  game_of_life.c  game_of_life.h  game_of_life_mpi.c  game_of_life_mpi.h  image_creation.c  image_creation.h  main.c  main_mpi.c  utils.c  utils.h  utils_grid.c  utils_grid.h
mpi_basics/: compile.sh  mpi-hello-world.c  round-robin.c  run.sh
